--- a/workers/besplatka/Dockerfile
+++ b/workers/besplatka/Dockerfile
@@ -4,7 +4,7 @@ ADD . /code
 WORKDIR /code
 
 RUN pip install --upgrade pip
-COPY requirements.txt .
+COPY ./requirements.txt .
 
 RUN pip install -r requirements.txt
 
